; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_openssl.c_url_bio_bread.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_tls_openssl.c_url_bio_bread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAGAIN = common dso_local global i32 0, align 4
@AVERROR_EXIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @url_bio_bread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @url_bio_bread(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i32* @GET_BIO_DATA(i32* %10)
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @ffurl_read(i32* %12, i8* %13, i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp sge i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %9, align 4
  store i32 %19, i32* %4, align 4
  br label %36

20:                                               ; preds = %3
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @BIO_clear_retry_flags(i32* %21)
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* @EAGAIN, align 4
  %25 = call i32 @AVERROR(i32 %24)
  %26 = icmp eq i32 %23, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %20
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @BIO_set_retry_read(i32* %28)
  br label %30

30:                                               ; preds = %27, %20
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* @AVERROR_EXIT, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %30
  store i32 0, i32* %4, align 4
  br label %36

35:                                               ; preds = %30
  store i32 -1, i32* %4, align 4
  br label %36

36:                                               ; preds = %35, %34, %18
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32* @GET_BIO_DATA(i32*) #1

declare dso_local i32 @ffurl_read(i32*, i8*, i32) #1

declare dso_local i32 @BIO_clear_retry_flags(i32*) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @BIO_set_retry_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
